force-app/main/default/objects/smagicinteract__MMS_Detail__c/smagicinteract__MMS_Detail__c.object-meta.xml
<CustomObject>
    <label>MMS Detail</label>
    <nameField>
        <label>MMS Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMS Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>