force-app/main/default/objects/smagicinteract__MMS_Detail__c/fields/smagicinteract__MMS_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MMS_Type__c</fullName>
    <description>This field contains the type of the MMS. The type can be: Internal or External.</description>
    <label>MMS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>