force-app/main/default/objects/smagicinteract__MMS_Detail__c/fields/smagicinteract__MMS_Url__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MMS_Url__c</fullName>
    <description>This field contains the URL of the MMS.</description>
    <label>MMS Url</label>
    <type>Url</type>
</CustomField>