force-app/main/default/objects/smagicinteract__MMS_Detail__c/fields/smagicinteract__SMS_History__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_History__c</fullName>
    <description>This field contains the ID of the related outgoing SMS.</description>
    <label>SMS History</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>MMS Details</relationshipLabel>
    <relationshipName>MMS_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>